[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/directional_menu/scenes/DirectionalMenu/DirectionalMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://example/ExampleMainScene.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.427451, 0.427451, 0.427451, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="DialogBar" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="DialogBar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="DirectionalMenu" parent="DialogBar/Background" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
SpreadFactor = Vector2( 1.6, 0.6 )

[node name="Panel" type="Panel" parent="DialogBar/Background/DirectionalMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 13.0
margin_top = 8.0
margin_right = 388.0
margin_bottom = 110.0
text = "Press numbers from 1 to 8 to show that amount of options
Press 9 to show a random number of options


[W] [A] [S] [D] to input directions
Space, Enter or [E] to select
Check output in console"

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -172.0
margin_top = 16.0
margin_right = -80.0
margin_bottom = 30.0
text = "Radial Pattern:"

[node name="Label3" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -172.0
margin_top = 48.0
margin_right = -80.0
margin_bottom = 62.0
text = "(Change with [X] or [C] )"

[node name="LabelRadialPattern" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_top = 16.0
margin_right = -2.0
margin_bottom = 30.0
text = "X"
